# expense-tracker-backend

./: .env  Cargo.toml  docker-compose.yml
migrations/: 01_users.sql  02_categories.sql  03_add_enum_category_type_to_categories.sql  04_add_is_savings_flag_to_categories.sql  05_transactions.sql  06_rename_expenses_to_transactions.sql
src/: errors.rs  lib.rs  main.rs
src/handlers/: categories.rs  transactions.rs  users.rs
src/helpers/: users.rs
src/middlewares/: auth.rs  mod.rs
src/models/: categories.rs  mod.rs  transactions.rs  users.rs
src/routers/: categories.rs  mod.rs  transactions.rs  users.rs
