[package]
name = "expense-tracker-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
sqlx-cli = { version = "0.8.6", features = ["rustls"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.18.0", features = ["serde"] }
